<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/ly_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_height_title"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/black">

        <TextView
            android:id="@+id/txt_back"
            style="@style/text_title_left"
            android:drawableLeft="@mipmap/btn_back"/>

        <TextView
            style="@style/text_title_middle"
            android:drawableTop="@mipmap/image_title_settings"
            android:text="@string/settings_EDIT_PROFILE"/>

        <TextView
            android:id="@+id/txt_done"
            style="@style/text_title_right"
            android:text="@string/tracks_Done"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ly_title"
        android:layout_marginBottom="@dimen/main_height_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/sign_name"
                />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#787878"
                android:textSize="15dp"
                android:text="@string/settings_Joined_on"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_small"
                android:layout_marginTop="10dp"
                android:background="@mipmap/bg_item_gender">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_item_sign"
                    android:hint="@string/sign_name"
                    android:textColorHint="@color/hint"
                    android:layout_marginLeft="@dimen/marginLeft_item"
                    android:inputType="text"
                    android:background="@null"
                    android:textCursorDrawable="@drawable/draw_cursor"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_small"
                android:layout_marginTop="@dimen/marginTop_item"
                android:background="@mipmap/bg_item_gender">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/marginLeft_item"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_item_sign"
                    android:text="@string/sign_Gender"/>

                <RadioGroup
                    android:layout_width="@dimen/height_item_small_2"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true">

                    <RadioButton
                        android:id="@+id/radio_m"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:background="@drawable/selector_gender"
                        android:textColor="@color/selector_000000_ffffff"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:text="@string/sign_M"/>

                    <RadioButton
                        android:id="@+id/radio_f"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:button="@null"
                        android:gravity="center"
                        android:background="@drawable/selector_gender"
                        android:textColor="@color/selector_000000_ffffff"
                        android:textSize="20dp"
                        android:text="@string/sign_F"/>
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_small"
                android:layout_marginTop="@dimen/marginTop_item"
                android:background="@mipmap/bg_item_mail">

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_item_sign"
                    android:textColorHint="@color/hint"
                    android:layout_marginLeft="@dimen/marginLeft_item"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_small"
                android:layout_marginTop="@dimen/marginTop_item"
                android:background="@mipmap/bg_item_stride">

                <TextView
                    style="@style/text_item_left_sign"
                    android:text="@string/sign_Stride"/>

                <ImageView
                    android:id="@+id/img_line_stride"
                    style="@style/image_item_line_v" />

                <EditText
                    android:id="@+id/edit_stride"
                    style="@style/edit_item_sign"
                    android:inputType="numberDecimal"
                    android:layout_toRightOf="@id/img_line_stride"/>

                <TextView
                    android:id="@+id/txt_stride_unit"
                    style="@style/text_item_right_sign"
                    android:text="@string/settings_inch" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_small"
                android:layout_marginTop="@dimen/marginTop_item"
                android:background="@mipmap/bg_item_height">

                <TextView
                    style="@style/text_item_left_sign"
                    android:text="@string/sign_Height"/>

                <ImageView
                    android:id="@+id/img_line_height_ft"
                    style="@style/image_item_line_v" />

                <RelativeLayout
                    android:id="@+id/ly_height_ft_in"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/img_line_height_ft">

                    <ImageView
                        android:id="@+id/img_line_height_in"
                        style="@style/image_item_line_v" />

                    <EditText
                        android:id="@+id/edit_height_ft"
                        style="@style/edit_item_sign"/>

                    <TextView
                        style="@style/text_item_right_sign"
                        android:layout_toLeftOf="@id/img_line_height_in"
                        android:layout_alignParentRight="false"
                        android:text="@string/settings_ft" />

                    <EditText
                        android:id="@+id/edit_height_in"
                        android:layout_toRightOf="@id/img_line_height_in"
                        style="@style/edit_item_sign"/>

                    <TextView
                        style="@style/text_item_right_sign"
                        android:text="@string/settings_in" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/edit_height_cm"
                    style="@style/edit_item_sign"
                    android:inputType="numberDecimal"
                    android:layout_toRightOf="@id/img_line_height_ft"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/txt_height_cm_unit"
                    style="@style/text_item_right_sign"
                    android:text="@string/settings_cm"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_item_small"
                android:layout_marginTop="@dimen/marginTop_item"
                android:background="@mipmap/bg_item_weight">

                <TextView
                    style="@style/text_item_left_sign"
                    android:text="@string/sign_Weight"/>

                <ImageView
                    android:id="@+id/img_line_weight"
                    style="@style/image_item_line_v" />

                <EditText
                    android:id="@+id/edit_weight"
                    style="@style/edit_item_sign"
                    android:inputType="numberDecimal"
                    android:layout_toRightOf="@id/img_line_weight"/>

                <TextView
                    android:id="@+id/txt_weight_unit"
                    style="@style/text_item_right_sign"
                    android:text="@string/settings_lbs" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
