<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@mipmap/image_logo_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/welcome_Exceed_Expectation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:text="@string/welcome_tip1"/>

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="@string/welcome_LOG_IN"
            android:background="@color/click"/>

        <TextView
            android:id="@+id/txt_sign"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="@string/welcome_SIGN_UP"
            android:background="@color/click"/>
    </LinearLayout>


</LinearLayout>
